--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -53,15 +53,15 @@
                     <li><a href="/ecstaff/index" class="nav-link px-3 text-white">EC Staff</a></li>
                     <li><a href="/inventory/index" class="nav-link px-3 text-white">Inventory</a></li>
                     <li><a href="/usermanagement/index" class="nav-link px-3 text-white">Users</a></li>
-                    @*<li><a href="/settings/index" class="nav-link px-3 text-white">Settings</a></li>*@
                 </ul>
                 <div class="flex-shrink-0 dropdown">
                     <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle text-white" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-person-circle text-white"></i>
                     </a>
                     <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                        <li><a class="dropdown-item" href="#">Notifications</a></li>
-                        <li><a class="dropdown-item" href="/settings/index">Settings</a></li>
+                        <li><a class="dropdown-item" href="/account/index">Profile</a></li>
+                        <li><a class="dropdown-item" href="/account/notifications">Notifications</a></li>
+                        <li><a class="dropdown-item" href="/account/settings">Settings</a></li>
                         @*<li><a class="dropdown-item" href="#">Profile</a></li>*@
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/account/logout">Logout</a></li>
