changed page redirect after logout

--- a/Pages/account/Logout.cshtml
+++ b/Pages/account/Logout.cshtml
@@ -24,5 +24,5 @@
     }
 
     // Redirect to the Index page after logout or encountering an error
-    Response.Redirect("/index?errorMessage=" + errorMessage + "&successMessage=" + successMessage);
+    Response.Redirect("/account/index?errorMessage=" + errorMessage + "&successMessage=" + successMessage);
 }
