added view assignment history page

--- a/Pages/ECStaff/Index.cshtml
+++ b/Pages/ECStaff/Index.cshtml
@@ -69,6 +69,7 @@
 	</div>
 </div>
 
+<!-- Table -->
 <div class="row">
 	<table id="staff-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
 		<thead>
