--- a/Pages/account/Index.cshtml
+++ b/Pages/account/Index.cshtml
@@ -180,7 +180,7 @@
                 <h4 class="d-flex justify-content-between align-items-center mb-3">Assignment History</h4>
                 <div class="row justify-content-center">
                     <div class="row">
-                        <table id="center-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                        <table id="staff-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
                             <thead>
                                 <tr style="vertical-align: top;">
                                     <th width="5%">#</th>
@@ -217,7 +217,7 @@
                                             }
                                         </td>
                                         <td>
-                                            <a class="btn btn-primary" href="/disaster/profile/informationboard/index?centerLogID=@item.centerLogID">
+                                            <a class="btn btn-primary" href="/disaster/profile/staffassignment/index?centerLogID=@item.centerLogID">
                                                 View
                                             </a>
                                         </td>
@@ -232,3 +232,76 @@
         </div>
     </div>
 </div>
+
+<!-- Making the table responsive -->
+<script>
+    $(document).ready(function () {
+        var table = $('#history-table').DataTable({
+            responsive: true,
+            pageLength: 25,
+            columnDefs: [
+                { "orderable": true, "targets": [0, 1, 2, 4, 5] }, // Sortable columns
+                { "orderable": false, "targets": [3, 6, 7] }, // Non-sortable columns
+            ]
+        });
+
+        table.columns([3, 6]).every(function () {
+            var column = this;
+            var filterContainer = $('<div class="dropdown align-items-center d-inline-flex ps-2"></div>').appendTo($(column.header()));
+            var btn = $('<button class="btn btn-sm btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="bi bi-funnel"></i></button>').appendTo(filterContainer);
+            var menu = $('<div class="dropdown-menu p-3"></div>').appendTo(filterContainer);
+
+            function updateFilterButton() {
+                var hasActiveFilter = column.search() !== '';
+                btn.toggleClass('btn-warning', hasActiveFilter);
+            }
+
+            column.data().unique().sort().each(function (d, j) {
+                // Only add the options "Available" and "On Duty" for the "Status" column
+                if (column.index() === 6) {
+                    // Set specific filter options only if they haven't been added
+                    if (menu.find("input[value='Assigned']").length === 0) {
+                        menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Assigned">' +
+                            '<label class="form-check-label ps-1">Assigned</label></div>');
+                    }
+                    if (menu.find("input[value='Completed']").length === 0) {
+                        menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="Completed">' +
+                            '<label class="form-check-label ps-1">Completed</label></div>');
+                    }
+                }
+                // For other columns, show all unique values as filter options
+                else {
+                    menu.append('<div class="form-check"><input class="form-check-input" type="checkbox" value="' + d + '">' +
+                        '<label class="form-check-label ps-1">' + d + '</label></div>');
+                }
+            });
+            menu.prepend('<div class="form-check"><input class="form-check-input select-all" type="checkbox" value="select-all">' +
+                '<label class="form-check-label ps-1">Select All</label></div>');
+
+            menu.append('<hr class="dropdown-divider"><div class="p-1"><button type="button" class="btn btn-sm btn-light clear-filter"><i class="bi bi-eraser pe-1"></i>Clear Filter</button></div>');
+
+            menu.find('.form-check-input, .clear-filter').on('click', function () {
+                var checked = $(this).prop('checked');
+
+                if ($(this).hasClass('form-check-input')) {
+                    if ($(this).val() === 'select-all') {
+                        menu.find('.form-check-input').prop('checked', checked);
+                    } else if (!checked) {
+                        menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+                    }
+                } else {
+                    menu.find('.form-check-input').prop('checked', false);
+                    menu.find('.form-check-input[value="select-all"]').prop('checked', false);
+                }
+
+                var selectedValues = menu.find('.form-check-input:checked').map(function () {
+                    return $(this).val();
+                }).get();
+
+                column.search(selectedValues.length > 0 ? '^(' + selectedValues.join('|') + ')$' : '', true, false).draw();
+                updateFilterButton();
+            });
+            updateFilterButton();
+        });
+    });
+</script>
