--- a/Pages/account/Index.cshtml
+++ b/Pages/account/Index.cshtml
@@ -76,7 +76,7 @@
 <!-- Title and Edit Button-->
 <div class="row mb-2">
     <div class="col-12 d-flex align-items-center justify-content-between">
-        <h1><i class="bi bi-person-fill" style="padding: 0 5px 0 5px;"></i>Profile</h1>
+        <h1><i class="bi bi-person-circle" style="padding: 0 5px 0 5px;"></i>Profile</h1>
 
         @if (Model.UserType == "EC Staff" || Model.UserType == "LGU Staff")
         {
